<resources>
    <string name="app_name">Guessing Game</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Currency</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Wrong!</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current currency in the quiz</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sounds_on_off">Sound On/Off</string>
    <string name="sounds_on_off_description">Turn the app sounds ON or OFF</string>
    <string name="correct_message">Correct!</string>
    <string name="incorrect_message">WRONG!</string>
    <string name="default_region">North_America</string>
    <string name="default_region_message">One region must be selected. Setting North America as the default region.</string>
</resources>

